# assurance-rs

./: .gitignore  Cargo.toml  DESIGN.md  README.md  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/assurance-backends/: Cargo.toml
crates/assurance-backends/src/: lib.rs
crates/assurance-core/: Cargo.toml
crates/assurance-core/src/: error.rs  lib.rs
crates/assurance-entity/: Cargo.toml
crates/assurance-entity/src/: lib.rs
crates/assurance-eval/: Cargo.toml
crates/assurance-eval/src/: lib.rs
crates/assurance-policy/: Cargo.toml
crates/assurance-policy/src/: lib.rs
crates/assurance-retrieval/: Cargo.toml
crates/assurance-retrieval/src/: lib.rs
crates/assurance-server/: Cargo.toml
crates/assurance-server/examples/: morty_mortgage_demo.rs
crates/assurance-server/fixtures/: demo_entities.json
crates/assurance-server/src/: main.rs
