[package]
name        = "assurance-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits and types for the assurance-rs point-in-time factuality stack."

[dependencies]
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
async-trait   = { workspace = true }
anyhow        = { workspace = true }
chrono        = { workspace = true }

[dev-dependencies]
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
