[package]
name        = "assurance-entity"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Entity resolution and long-tail confidence scoring against U.S. public registries."

[dependencies]
assurance-core = { path = "../assurance-core" }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
tokio               = { workspace = true }
tracing-subscriber  = { workspace = true }
