[package]
name        = "assurance-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Long-tail factuality evaluation harness sampled from U.S. public registries."

[dependencies]
assurance-core = { path = "../assurance-core" }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
tokio               = { workspace = true }
tracing-subscriber  = { workspace = true }
