[package]
name        = "assurance-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Calibrated abstention and provenance policies."

[dependencies]
assurance-core = { path = "../assurance-core" }
tracing        = { workspace = true }

[dev-dependencies]
chrono              = { workspace = true }
tracing-subscriber  = { workspace = true }
