[package]
name        = "assurance-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Retrieval with cryptographic point-in-time attestation (ed25519 + BLAKE3)."

[dependencies]
assurance-core = { path = "../assurance-core" }
async-trait    = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
chrono         = { workspace = true }
blake3         = { workspace = true }
ed25519-dalek  = { workspace = true }
rand           = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
tokio               = { workspace = true }
tracing-subscriber  = { workspace = true }
